# metarace-v1

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  v1-changes.md
src/metarace/: __init__.py  aggregate.py  apploader.py  classification.py  countback.py  crc_algorithms.py  cross.py  eventdb.py  export.py  f200.py  gemini.py  hour.py  htlib.py  irtt.py  ittt.py  jsonconfig.py  loghandler.py  namebank.py  ps.py  race.py  report.py  riderdb.py  rms.py  roadmeet.py  scbwin.py  sender.py  sprnd.py  strops.py  telegraph.py  timerpane.py  timy.py  tod.py  trackmeet.py  trtt.py  ucsv.py  uiutil.py  unt4.py
src/metarace/data/: metarace.json
src/metarace/decoder/: __init__.py  rrs.py  rru.py  thbc.py
src/metarace/ui/: create_meet.ui  hour.ui  hour_properties.ui  race.ui  rms.ui  rms_context.ui  roadmeet.ui  roadmeet_props.ui  tod_context.ui  trackmeet.ui  transponder_reg.ui
