[metadata]
# replace with your username:
name = metarace
version = 1.12.3
author = Nathan Fraser
author_email = ndf@metarace.com.au
description = Cycle race tools for Python2/pygtk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ndf-zz/metarace-v1
project_urls =
    Bug Tracker = https://github.com/ndf-zz/metarace-v1/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: GTK
    Intended Audience :: Other Audience
    Natural Language :: English
    Topic :: Other/Nonlisted Topic
    Programming Language :: Python :: 2
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = <3.0

[options.packages.find]
where = src
